@@ -14,6 +14,12 @@ java {
     }
 }
 
+// Case문 프리뷰
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 17
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -26,13 +32,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.mapstruct:mapstruct:1.6.3'
     // AWS
     implementation platform('software.amazon.awssdk:bom:2.21.29')
@@ -42,7 +46,6 @@ dependencies {
     implementation 'software.amazon.awssdk:auth'
     implementation 'software.amazon.awssdk:aws-core'
     implementation 'software.amazon.awssdk:regions'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     // Jaro Winkler 유사도 계산 의존성
     implementation 'org.apache.commons:commons-text:1.11.0'
     // MongoDB (개발/운영용)
@@ -57,10 +60,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'com.h2database:h2'
-    testImplementation 'org.springframework.security:spring-security-test'
-    // 임베디드 MongoDB (테스트용)
-    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Querydsl 설정
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+    // https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
 
 tasks.named('test') {
@@ -113,6 +121,18 @@ afterEvaluate {
                     minimum = 0.80 // 라인 커버리지 최소 비율을 80%로 설정
                 }
             }
+        }
+    }
+}
+
+// Q객체 생성 위치 경로 지정
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+    main {
+        java {
+            srcDir querydslDir
+            srcDir 'build/generated/sources/annotationProcessor/java/main'
         }
     }
 }
